# git-assistant

./: .git-assistant.toml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.git-assistant-preview/: README.diff  README.preview.md
src/git_assistant/: cli.py
src/git_assistant/ai/: base.py  factory.py  ollama.py
src/git_assistant/changelog/: __init__.py  entry.py  writer.py
src/git_assistant/commit/: diff_context.py  message.py  service.py
src/git_assistant/config/: loader.py
src/git_assistant/context/: __init__.py  diff_context.py  repo_context.py
src/git_assistant/git/: ops.py  tags.py
src/git_assistant/hosting/: __init__.py  providers.py
src/git_assistant/readme/: __init__.py  parser.py  preview.py  prompt.py  service.py  writer.py
src/git_assistant/release/: __init__.py  ai_evaluator.py  decision.py  evaluator.py  executor.py  versioning.py
tests/: test_ai_evaluator.py  test_cli_init.py  test_cli_manual_release.py  test_cli_push_flow.py  test_cli_readme_dry_run.py  test_cli_release_prompt.py  test_cli_restore.py  test_cli_sync.py  test_config_loader.py  test_git_ops.py  test_hosting_providers.py  test_readme_preview.py  test_readme_service.py  test_release_evaluator.py  test_release_executor.py
