[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-assistant"
version = "0.7.0"
description = "CLI tool to generate git commit messages using Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
git-assistant = "git_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
